opened dialog on clicking FAB

--- a/app/src/main/res/layout/activity_reminder_info.xml
+++ b/app/src/main/res/layout/activity_reminder_info.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:layout_marginBottom="0dp"
     android:background="@color/colorPrimary"
+    android:gravity="center"
     android:theme="@style/AppTheme.ReminderInfo"
     tools:context=".TODOList.ReminderInfo">
 
@@ -16,22 +16,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:elevation="5dp"
-        android:src="@drawable/ic_close_black_24dp"
         android:contentDescription="@string/close"
         android:contextClickable="true"
-        android:onClick="closeActivity"/>
+        android:elevation="5dp"
+        android:onClick="closeActivity"
+        android:src="@drawable/ic_close_black_24dp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:cardCornerRadius="10dp"
-        app:cardBackgroundColor="@color/popUpColor">
+        android:layout_alignParentEnd="true"
+        app:cardBackgroundColor="@color/popUpColor"
+        app:cardCornerRadius="10dp">
 
         <ScrollView
             android:id="@+id/scroll_view"
@@ -39,23 +37,25 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp">
+                android:layout_marginBottom="30dp"
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/enter_details"
                     android:layout_margin="10dp"
                     android:ems="10"
-                    android:textSize="30sp"
+                    android:text="@string/reminder_prompt_title"
                     android:textAlignment="center"
-                    android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
-                    />
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/reminderTitle"
                     android:layout_width="match_parent"
@@ -63,6 +63,17 @@
                     android:layout_margin="20dp"
                     android:layout_marginTop="0dp"
                     android:layout_marginBottom="5dp">
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left|center_vertical"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:onClick="onSetLocationPressed"
+                        android:text="@string/set_location_txt"
+                        android:drawableLeft="@drawable/ic_add_location_black_24dp"
+                        android:drawablePadding="20dp"
+                        android:textColor="@color/white" />
 
                     <EditText
                         android:id="@+id/urlName"
@@ -72,43 +83,52 @@
                         android:ems="10"
                         android:hint="@string/reminder"
                         android:inputType="text" />
+
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <androidx.coordinatorlayout.widget.CoordinatorLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:weightSum="3">
+
                         <Button
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center|center"
+                            android:layout_weight="1"
+                            android:backgroundTint="@color/colorPrimary"
+                            android:onClick="clearText"
                             android:text="@string/button_clear"
-                            android:layout_weight="1"
-                            android:layout_gravity="center|center"
-                            android:backgroundTint="@color/colorPrimary"
-                            android:onClick="clearText"/>
+                            android:textColor="@color/white"/>
+
                         <Button
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center|center"
                             android:layout_weight="1"
+                            android:backgroundTint="@color/colorPrimary"
+                            android:onClick="createReminder"
                             android:text="@string/add_submit"
-                            android:backgroundTint="@color/colorPrimary"
-                            android:onClick="createReminder"/>
+                            android:textColor="@color/white"/>
+
                         <Button
+                            android:id="@+id/closeSetReminderPromptBtn"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center|center"
                             android:layout_weight="1"
-                            android:text="@string/exit"
                             android:backgroundTint="@color/exit"
-                            android:onClick="exit"/>
+                            android:text="@string/exit"
+                            android:onClick="exit"
+                            android:textColor="@color/white"/>
                     </LinearLayout>
                 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
             </LinearLayout>
         </ScrollView>
     </androidx.cardview.widget.CardView>
