--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="popUpColor">#F1F8E9</color>
     <color name="exit">#404B47</color>
+    <color name="white">#ffffff</color>
 </resources>
