--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -9,7 +9,7 @@
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    com.example.khojak.TODOList
+    com.example.khojak.LocationReminder.TODOList
 
     SHA-1 certificate fingerprint:
     54:F5:0E:27:7C:CE:FC:45:C4:BE:01:CC:81:25:AE:5D:59:40:CB:F8
