--- a/app/src/main/res/layout/activity_reminder_info.xml
+++ b/app/src/main/res/layout/activity_reminder_info.xml
@@ -10,7 +10,7 @@
     android:background="@color/colorPrimary"
     android:gravity="center"
     android:theme="@style/AppTheme.ReminderInfo"
-    tools:context=".TODOList.TODOListPersonal">
+    tools:context=".LocationReminder.TODOList.TODOListPersonal">
 
     <ImageView
         android:layout_width="wrap_content"
