--- a/app/src/main/res/layout/content_todo_personal.xml
+++ b/app/src/main/res/layout/content_todo_personal.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_todo_personal"
-    tools:context=".TODOList.TODOListPersonal">
+    tools:context=".LocationReminder.TODOList.TODOListPersonal">
 
     <ListView
         android:id="@+id/personal_todo_list"
