--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="popUpColor">#F1F8E9</color>
     <color name="exit">#404B47</color>
     <color name="white">#ffffff</color>
+    <color name="reminderCardTextBg">#ff6b81</color>
+    <color name="trackerCardTextBg">#5352ed</color>
 </resources>
