--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="exit">#404B47</color>
     <color name="white">#ffffff</color>
     <color name="reminderCardTextBg">#ff6b81</color>
-    <color name="trackerCardTextBg">#5352ed</color>
+    <color name="trackerCardTextBg">#778beb</color>
 </resources>
