--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,105 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#273c75">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:context=".HomePage">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-
-        <com.google.android.material.appbar.AppBarLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".HomePage"
+        android:background="#273c75">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/locationReminderCard"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="30dp"
+                android:onClick="openLocationReminderActivity"
+                app:cardCornerRadius="12dp">
 
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/locationReminderCard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            android:onClick="openLocationReminderActivity"
-            app:cardCornerRadius="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/locRem_Img"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:alpha="0.7"
-                    android:contentDescription="@string/location_reminder"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/location_reminder" />
-
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/reminderCardTextBg"
-                    android:gravity="center"
-                    android:padding="20dp"
-                    android:text="@string/location_reminder"
-                    android:textColor="#FFFFFF"
-                    android:textSize="30sp" />
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <ImageView
+                        android:id="@+id/locRem_Img"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:alpha="0.7"
+                        android:contentDescription="@string/location_reminder"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/location_reminder" />
 
-        </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/reminderCardTextBg"
+                        android:gravity="center"
+                        android:padding="20dp"
+                        android:text="@string/location_reminder"
+                        android:textColor="#FFFFFF"
+                        android:textSize="30sp" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/locationTrackerCard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            android:onClick="openLocationTrackerActivity"
-            app:cardCornerRadius="12dp">
+                </LinearLayout>
 
-            <LinearLayout
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/locationTrackerCard"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="30dp"
+                android:onClick="openLocationTrackerActivity"
+                app:cardCornerRadius="12dp">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:contentDescription="@string/location_tracker"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/location_tracker" />
-
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/trackerCardTextBg"
-                    android:gravity="center"
-                    android:padding="20dp"
-                    android:text="@string/location_tracker"
-                    android:textColor="#FFFFFF"
-                    android:textSize="30sp" />
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:contentDescription="@string/location_tracker"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/location_tracker" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/trackerCardTextBg"
+                        android:gravity="center"
+                        android:padding="20dp"
+                        android:text="@string/location_tracker"
+                        android:textColor="#FFFFFF"
+                        android:textSize="30sp" />
 
 
-            </LinearLayout>
+                </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
