added no reminder msg

--- a/app/src/main/res/layout/fragment_personal_reminders.xml
+++ b/app/src/main/res/layout/fragment_personal_reminders.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationReminder.PersonalRemindersFragment"
-    android:orientation="vertical">
-    
-    <androidx.recyclerview.widget.RecyclerView
+    android:background="#d1d8e0"
+    android:orientation="vertical"
+    tools:context=".LocationReminder.PersonalRemindersFragment">
+
+    <edu.neu.khojak.LocationReminder.EmptyRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
-    
-</LinearLayout>
+    <TextView
+        android:id="@+id/noReminderSetMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/no_reminders_set"
+        android:textSize="24sp"
+        android:visibility="invisible"/>
+
+
+</RelativeLayout>
