added collapsing fabMenu

--- a/app/src/debug/res/layout/activity_combined_reminders.xml
+++ b/app/src/debug/res/layout/activity_combined_reminders.xml
@@ -41,7 +41,8 @@
         android:layout_alignParentBottom="true"
         app:fab_addButtonColorNormal="@android:color/holo_green_light"
         app:fab_addButtonColorPressed="@android:color/holo_green_dark"
-        app:fab_labelStyle="@style/customFAB">
+        app:fab_labelStyle="@style/customFAB"
+        android:id="@+id/fabMenu">
 
 
         <com.getbase.floatingactionbutton.FloatingActionButton
