--- a/app/src/debug/res/layout/fragment_group_reminders.xml
+++ b/app/src/debug/res/layout/fragment_group_reminders.xml
@@ -19,11 +19,13 @@
         android:onClick="createGroup"
         />
 
-    <edu.neu.khojak.LocationReminder.EmptyRecyclerView
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/createGroupBtn"
-        />
+        android:layout_height="wrap_content"
+        android:id="@+id/groupListView"
+        android:layout_margin="10dp"
+        android:layout_below="@id/createGroupBtn"/>
+
 
 
 </RelativeLayout>
