--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,14 +29,22 @@
         android:textSize="40sp"
         android:layout_marginTop="20dp"
         android:textStyle="bold" />
-    <EditText
-        android:layout_marginTop="60dp"
-        android:id="@+id/username"
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/prompt_username"
-        android:inputType="text"
-        android:selectAllOnFocus="true" />
+        android:layout_marginTop="20dp" >
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/prompt_username"
+            android:inputType="text"
+            android:selectAllOnFocus="true"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
