--- a/app/src/debug/res/layout/activity_group_details.xml
+++ b/app/src/debug/res/layout/activity_group_details.xml
@@ -29,7 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="40sp"
-        android:text="pankaj"
         android:layout_gravity="center_vertical|center_horizontal" />
 
     <TextView
@@ -37,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="pankaj"
         android:layout_gravity="center_vertical|center_horizontal" />
 
     <edu.neu.khojak.LocationReminder.EmptyRecyclerView
@@ -45,12 +43,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <ListView
-        android:id="@+id/listOfReminders"
-        android:layout_margin="10dp"
-        android:background="@android:color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+<!--    <ListView-->
+<!--        android:id="@+id/listOfReminders"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:background="@android:color/white"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content" />-->
 
 
 </LinearLayout>
