added location tracker code

--- a/app/src/main/res/layout/activity_location_tracker.xml
+++ b/app/src/main/res/layout/activity_location_tracker.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".LocationTracker.LocationTracker">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -20,14 +21,40 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_location_tracker" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_margin="30dp">
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userToBeTracked"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="I want to track..." />
+
+        <Button
+            android:id="@+id/setPersonalLocationBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary"
+            android:drawableLeft="@drawable/ic_add_location_black_24dp"
+            android:drawablePadding="20dp"
+            android:layout_marginTop="20dp"
+            android:gravity="left|center_vertical"
+            android:onClick="setDestinationLocation"
+            android:text="@string/set_destination_location_txt"
+            android:textColor="@color/white" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:textColor="@color/white"
+            android:background="@android:color/holo_red_light"
+            android:text="@string/start_tracking"
+            android:onClick="saveDetailsAndStartTracking"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+</LinearLayout>
