--- a/app/src/debug/res/layout/fragment_group_reminders.xml
+++ b/app/src/debug/res/layout/fragment_group_reminders.xml
@@ -29,7 +29,7 @@
         android:id="@+id/deleteTip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Swipe left or right to delete groups"
+        android:text="Swipe groups left or right to delete them"
         android:textSize="14sp"
         android:textStyle="italic"
         android:layout_marginLeft="10dp" />
