--- a/app/src/main/res/layout/fragment_personal_reminders.xml
+++ b/app/src/main/res/layout/fragment_personal_reminders.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LocationReminder.PersonalRemindersFragment">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Swipe reminders left or right to delete them"
+        android:textSize="14sp"
+        android:textStyle="italic"
+        android:layout_marginVertical="10dp"
+        android:layout_marginStart="10dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp">
 
     <edu.neu.khojak.LocationReminder.EmptyRecyclerView
         android:id="@+id/recycler_view"
@@ -15,12 +30,13 @@
         android:id="@+id/noReminderSetMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/no_reminders_set"
         android:textSize="24sp"
         android:visibility="invisible"/>
 
+    </RelativeLayout>
 
-</RelativeLayout>
+
+</LinearLayout>
