--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,9 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationReminder.TODOList.LocationActivity" />
+    android:orientation="horizontal">
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".LocationReminder.TODOList.LocationActivity" />
+
+    <!--<androidx.appcompat.widget.SearchView-->
+    <!--    android:id="@+id/search_bar"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_margin="10dp"-->
+    <!--    android:elevation="5dp"-->
+    <!--    app:queryHint="Search For Locations"-->
+    <!--    android:background="#FFFFFF"-->
+    <!--    app:iconifiedByDefault="false">-->
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_margin="10dp">
+
+    <fragment
+        android:id="@+id/autocomplete_fragment"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp" />
+    </androidx.cardview.widget.CardView>
+
+<!--    <AutocompleteSupportFragment-->
+<!--        android:id="@+id/autocomplete_fragment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:elevation="5dp"/>-->
+
+    <!--</androidx.appcompat.widget.SearchView>-->
+</RelativeLayout>
