added friend request feature

--- a/app/src/main/res/layout/activity_pending_requests.xml
+++ b/app/src/main/res/layout/activity_pending_requests.xml
@@ -34,7 +34,7 @@
     <edu.neu.khojak.LocationReminder.EmptyRecyclerView
         android:id="@+id/pendingRequestsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
         />
 
