--- a/app/src/main/res/layout/activity_location_tracker.xml
+++ b/app/src/main/res/layout/activity_location_tracker.xml
@@ -31,11 +31,11 @@
                     android:text="Show pending requests"
                     android:layout_alignParentRight="true"
                     android:textSize="14sp"
-                    android:textColor="@color/white"
                     android:layout_marginRight="10dp"
                     android:paddingHorizontal="10dp"
+                    android:textColor="@android:color/black"
                     android:onClick="showPendingRequestsPressed"
-                    android:background="@android:color/black"
+                    android:background="@drawable/custom_button_pending_request"
                     />
             </RelativeLayout>
 
@@ -78,13 +78,19 @@
             android:layout_marginTop="5dp"
             android:text="Send Request to track"
             android:onClick="sendTrackingRequestPressed"
-            android:background="@android:color/holo_orange_dark" />
+            android:background="@android:color/holo_green_light" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
 
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="?android:attr/listDivider" />
 
 
 
@@ -94,13 +100,27 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp">
 
-
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/userToBeTracked"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="I want to track..." />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Friend to track:"
+                android:layout_weight="1"/>
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/userToBeTracked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                />
+
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/setPersonalLocationBtn"
