--- a/app/src/main/res/layout/activity_group_details.xml
+++ b/app/src/main/res/layout/activity_group_details.xml
@@ -48,17 +48,30 @@
         android:layout_marginVertical="10dp"
         android:layout_marginStart="10dp" />
 
-    <edu.neu.khojak.LocationReminder.EmptyRecyclerView
-        android:id="@+id/groupRemindersRecyclerView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
-<!--    <ListView-->
-<!--        android:id="@+id/listOfReminders"-->
-<!--        android:layout_margin="10dp"-->
-<!--        android:background="@android:color/white"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content" />-->
+        <edu.neu.khojak.LocationReminder.EmptyRecyclerView
+            android:id="@+id/groupRemindersRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/noReminderSetMsgForGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="@string/no_reminders_set"
+            android:textSize="24sp"
+            android:visibility="invisible"/>
+
+
+    </RelativeLayout>
+
+
+
 
 
 </LinearLayout>
